tests/ui/resolve/112590-2.stderr
error[E0433]: failed to resolve: could not find `sync_error` in `std`
  --> $DIR/112590-2.rs:5:19
   |
LL |     let _t = std::sync_error::atomic::AtomicBool::new(true);
   |                   ^^^^^^^^^^ could not find `sync_error` in `std`

error[E0433]: failed to resolve: use of undeclared crate or module `vec`
  --> $DIR/112590-2.rs:4:15
   |
LL |     type _B = vec::Vec::<u8>;
   |               ^^^ use of undeclared crate or module `vec`
   |
help: consider importing this module
   |
LL + use std::vec;
   |

error[E0433]: failed to resolve: use of undeclared crate or module `vec`
  --> $DIR/112590-2.rs:3:24
   |
LL |     let _t: Vec<i32> = vec::new();
   |                        ^^^
   |                        |
   |                        use of undeclared crate or module `vec`
   |                        help: a struct with a similar name exists (notice the capitalization): `Vec`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0433`.
